--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title> Anton Troynikov</title>
+    <title>  Only Forward </title>
     <meta charset="utf-8">
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
@@ -172,7 +172,7 @@
   </div>
 
 
-<div class=tall> 
+<!-- <div class=tall> 
     <div class="title" style="padding-bottom: 2rem;">
         miscellaneous
     </div>
@@ -183,7 +183,7 @@
             <tr> <td> <a target="_blank" href="{{ .link }}"> {{ .title }} </a> </td> </tr> 
         {{ end }}
     </table>     
-</div>
+</div> -->
 
 
 
