--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,6 +1,6 @@
 <div class=sidebar> 
 
-    <div class="title"> <a href="/"> anton troynikov </a> </div>
+    <div class="title"> <a href="/"> only forward >> </a> </div>
 
     
     <!-- <a href="{{ .Site.Params.subscriptionLink}}">
