fixed lots of stuff

--- a/layouts/notes/single.html
+++ b/layouts/notes/single.html
@@ -23,6 +23,7 @@
 
     <article id="article">
       <div class=width-limit>
+        <h1> {{ .Title | markdownify }} </h1>
         {{ .Content }}
       </div>
     </article>
