--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,53 +1,5 @@
 {{ define "main" }}
-<style>
-
-    .title-bar{
-      padding-left: 10rem;
-    }
-
-    @media screen and (max-width: 1100px) {
-
-                .sidebar{
-                    display: none;
-                }
-
-                main{
-                    width: 100%;
-                }
-
-                article{
-                  max-width: 100%;
-                  padding: 2rem 8rem;
-                }
-
-                .title-bar{
-                  padding-left: 8rem;
-                }
-            }
-
-    @media screen and (max-width: 800px) {
-
-                article{
-                  max-width: 100%;
-                  padding: 2rem 5%;
-                }
-
-                .progress{
-                  display: none;
-                }
-
-                .title-bar{
-                  padding: 0px 5%;
-                }
-
-                h1{
-                  font-size: 1.6rem;
-                  overflow: hidden;
-                  white-space: nowrap;
-                  text-overflow: ellipsis;
-                }
-            }
-</style>
+  <link rel="stylesheet" href=/css/essay.css>
 
   <main>
 
