--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,8 +24,9 @@
     <meta name="twitter:image" content="https://troynikov.io/media/card.jpg" />
 
     <meta name="description" content="{{ .Description }}">
-
-    {{ partial "home-styles.html" }}
+      <meta name="made-by" content="Judah">
+      <link rel="stylesheet" href=/css/home.css>
+      <link rel="stylesheet" href=/css/sidebar.css>
 </head>
 
 <body>
@@ -79,11 +80,11 @@
         {{ range where .Site.RegularPages "Section" "essays" }}
           {{ if .Params.featured }}
             <div class=selected-post>
-                      <figure>
-                        <div class=wrapper> <a target="_blank" href="{{ .Permalink }}"> <img alt="{{ .Title }}" src="/media/essays/{{ .Params.thumbnail }}"> </a></div>
-                        <figcaption> <a href="{{ .Permalink }}">{{ .Title }}</a></figcaption>
-                      </figure>
-                </div>
+                <figure>
+                <div class=wrapper> <a target="_blank" href="{{ .Permalink }}"> <img alt="{{ .Title }}" src="/media/essays/{{ .Params.thumbnail }}"> </a></div>
+                <figcaption> <a href="{{ .Permalink }}">{{ .Title }}</a></figcaption>
+                </figure>
+            </div>
           {{ end }}
         {{ end }}
     </div>
@@ -105,7 +106,7 @@
                 </tr>
             {{ end }}
         </table>
-        <div class=reverse style="width:95%; text-align: right; padding: 10px 2.5%">
+        <div class=reverse style="width:100%; text-align: right; padding: 12px 2.5%">
             <a href="/notes" style="display: block; width:100%">See all notes --></a> </div>
         </div>
 
@@ -172,32 +173,28 @@
   </div>
 
 
-<div class=tall> 
-    <div class="title" style="padding-bottom: 2rem;">
-        miscellaneous
+    <div class=tall> 
+        <div class="title" style="padding-bottom: 2rem;">
+            miscellaneous
+        </div>
+
+        <table>
+            <thead> <th> more stuff i recommend </th> </thead>
+            {{ range $.Site.Data.media.entries }}
+                <tr> <td> <a target="_blank" href="{{ .link }}"> {{ .title }} </a> </td> </tr> 
+            {{ end }}
+        </table>     
     </div>
 
-    <table>
-        <thead> <th> more stuff i recommend </th> </thead>
-        {{ range $.Site.Data.media.entries }}
-            <tr> <td> <a target="_blank" href="{{ .link }}"> {{ .title }} </a> </td> </tr> 
-        {{ end }}
-    </table>     
-</div>
 
-
-
-  <div class="manifesto">
-    <h2> Manifesto </h2>
-
-    <div class=three-col>
-
-        {{ with .GetPage "/manifesto.md" }}
-            {{ .Content | markdownify }}
-        {{ end }}
-
+    <div class="manifesto">
+        <h2> Manifesto </h2>
+        <div class=three-col>
+            {{ with .GetPage "/manifesto.md" }}
+                {{ .Content | markdownify }}
+            {{ end }}
+        </div>
     </div>
-  </div>
 
 </div>
 
