--- a/static/css/notes.css
+++ b/static/css/notes.css
@@ -1,6 +1,6 @@
     .note-preview-holder{
       width: 31%;
-      margin: 2% 0px;
+      margin: 1rem 0px;
       display: inline-block;
       opacity: 0.8;
       position: relative;
@@ -87,7 +87,7 @@
     }
 
     article{
-      padding: 2rem 3rem;
+      padding: 2rem 4rem;
       box-sizing: border-box;
       text-align: left;
       max-width: calc(100% - 21rem);
@@ -112,14 +112,6 @@
 
     @media screen and (max-width: 1100px) {
 
-                .sidebar{
-                    display: none;
-                }
-
-                main{
-                    width: 100%;
-                }
-
                 article{
                   max-width: 100%;
                   padding: 3rem 5%;
@@ -134,7 +126,7 @@
 
                 article{
                   max-width: 100%;
-                  padding: 4rem 10%;
+                  padding: 4rem 5%;
                 }
 
                 .note-scroll{
