--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,7 +24,7 @@
     <meta name="twitter:image" content="https://troynikov.io/media/card.jpg" />
 
     <meta name="description" content="{{ .Description }}">
-      <meta name="made-by" content="Judah">
+      <meta name="made-by" content="Judah - joodaloop.com">
       <link rel="stylesheet" href=/css/home.css>
       <link rel="stylesheet" href=/css/sidebar.css>
 </head>
