--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -27,6 +27,6 @@
 <meta name="twitter:image" content="https://troynikov.io/media/card.jpg" />
 
   <meta name="description" content="{{ .Description }}">
-  <meta name="made-by" content="Judah">
+  <meta name="made-by" content="Judah - joodaloop.com">
   <link rel="stylesheet" href=/css/style.css>
   <link rel="stylesheet" href=/css/sidebar.css>
